--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <link rel="stylesheet" href="banner1style.css">
     <link rel="stylesheet" href="https://use.typekit.net/rdw6gvc.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 
 <title>CityScape Banner Test 1</title>
 </head>
 <body>
 <div class="banner">
     <div class="banner-content">
-                <div class="logo">div4</div>
+                <div class="logo">
+                    <img src="/img/logo.svg">
+                </div>
     
 
         <div class="text">
@@ -17,9 +21,21 @@
             <p style="font-weight: 700">14-15 Nov 2023 | Qatar</p>
             
         </div>
-    <div class="img">div2</div>
-<div class="button">
-            <button>Register Now</button>
+
+    <div class="img">
+        <img url(maskedimg1.png)>
+    </div>
+
+
+<div class="button" style="height: 22px; border-radius: 25px;
+background-color: #F49B35; color: white;
+width: 100px; display: flex; flex-direction: row; align-items: center; justify-content: center;
+box-shadow: 0px 0px 5px rgba(0,0,0,15%); ">
+            <div style="font-size: 0.6rem; font-weight:400;">Register Now 
+                <span 
+            style="padding-left: 6px; position:relative; top:2px;">
+                <img style="width: 8px;" src="/img/arrow-right.svg"></span>
+            </div>
         </div>
     </div>
     <div class="color-block"></div>
