--- a/index.html
+++ b/index.html
@@ -11,35 +11,21 @@
 <body>
 <div class="banner">
     <div class="banner-content">
-                <div class="logo">
-                    <img src="/img/logo.svg">
-                </div>
-    
-
+        <div class="logo"><img src="/img/logo.svg"></div>
         <div class="text">
             <h1 style="font-weight: 300">DISCOVER A NEW ERA OF REAL ESTATE</h1>
-            <p style="font-weight: 700">14-15 Nov 2023 | Qatar</p>
-            
-        </div>
-
-    <div class="img">
-        <img url(maskedimg1.png)>
+            <p style="font-weight: 700">14-15 Nov 2023 | Qatar</p></div>
+        <div class="image">
+            <div class="hero-image"><img src="img/maskedimg1.jpg" class="mask-img"></div></div>   
+        <div class="button">
+                    <div style="font-size: 8.5px; font-weight:400;position:relative; top:-1px;">Register Now 
+                        <span 
+                    style="padding-left: 6px; position:relative; top:2px;">
+                        <img style="width: 8px;" src="/img/arrow-right.svg"></span>
+                    </div></div>
     </div>
-
-
-<div class="button" style="height: 22px; border-radius: 25px;
-background-color: #F49B35; color: white;
-width: 100px; display: flex; flex-direction: row; align-items: center; justify-content: center;
-box-shadow: 0px 0px 5px rgba(0,0,0,15%); ">
-            <div style="font-size: 0.6rem; font-weight:400;">Register Now 
-                <span 
-            style="padding-left: 6px; position:relative; top:2px;">
-                <img style="width: 8px;" src="/img/arrow-right.svg"></span>
-            </div>
-        </div>
-    </div>
-    <div class="color-block"></div>
-    <div class="banner-bg"></div>
+        <div class="color-block"></div>
+        <div class="banner-bg"></div>
 </div>
 
 </body>
