--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <h1 style="font-weight: 300">DISCOVER A NEW ERA OF REAL ESTATE</h1>
             <p style="font-weight: 700">14-15 Nov 2023 | Qatar</p></div>
         <div class="image">
-            <div class="hero-image"><img src="https://github.com/EmyApr/cs_banners/blob/main/img/maskedimg1.jpg" class="mask-img"></div></div>   
+            <div class="hero-image"><img src="img/maskedimg1.jpg" class="mask-img"></div></div>   
         <div class="button">
                     <div style="font-size: 8.5px; font-weight:400;position:relative; top:-1px;">Register Now 
                         <span 
                     style="padding-left: 6px; position:relative; top:2px;">
-                        <img style="width: 8px;" src="https://github.com/EmyApr/cs_banners/blob/main/img/mask1.svg"></span>
+                        <img style="width: 8px;" src="/img/arrow-right.svg"></span>
                     </div></div>
     </div>
         <div class="color-block"></div>
