--- a/index.html
+++ b/index.html
@@ -2,25 +2,23 @@
 <html>
 <head>
     <link rel="stylesheet" href="banner1style.css">
-    <link rel="stylesheet" href="https://use.typekit.net/rdw6gvc.css">
-
 
 <title>CityScape Banner Test 1</title>
 </head>
 <body>
 <div class="banner">
     <div class="banner-content">
-        <div class="logo"><img src="./img/logo.svg"></div>
+        <div class="logo"><img src="img/logo.svg"></div>
         <div class="text">
             <h1 style="font-weight: 300">DISCOVER A NEW ERA OF REAL ESTATE</h1>
             <p style="font-weight: 700">14-15 Nov 2023 | Qatar</p></div>
         <div class="image">
-            <div class="hero-image"><img src="./img/maskedimg1.jpg" class="mask-img"></div></div>   
+            <div class="hero-image"><img src="img/maskedimg1.jpg" class="mask-img"></div></div>   
         <div class="button">
                     <div style="font-size: 8.5px; font-weight:400;position:relative; top:-1px;">Register Now 
                         <span 
                     style="padding-left: 6px; position:relative; top:2px;">
-                        <img style="width: 8px;" src="./img/arrow-right.svg"></span>
+                        <img style="width: 8px;" src="img/arrow-right.svg"></span>
                     </div></div>
     </div>
         <div class="color-block"></div>
